# github-actions

./: .gitignore  FINAL_SUMMARY.md  GITHUB_ACTIONS_LEARNING.md  MOBILE_TESTING_ARCHITECTURE.md  PRACTICE_EXERCISES.md  README.md  README_ANDROID_COMPOSE.md  README_COMPLETE_SETUP.md  README_ios_real_device.md  android_test_result.txt  appium_config_ios_real_device.json  appium_inspector_config.json  appium_inspector_config_fixed.json  check_environment.sh  complete_ios_setup.sh  conftest_ios_real_device.py  debug_android_device.sh  debug_device_access.sh  ios_real_device_commands.md  minimal_ios_test.py  one_command_ios_test.sh  open_wda_in_xcode.sh  preflight_check.sh  pyproject.toml  quick_start.sh  run_android_compose_test.sh  run_parallel_tests.sh  setup_environment.sh  test_android_simple.py  test_ios_enhanced_swipe.py  test_ios_real_device.py  test_ios_simple.py  test_parallel_mobile.py
.cursor/rules/: terminal-command-explanation.mdc  terminalcommandexplanation.mdc  your-role.mdc
.github/workflows/: android-real-device-ci.yml  hello-world.yml  ios-real-device-ci.yml  ios-simulator-ci.yml  ios-test-basic.yml  mobile-device-parallel-ci.yml  mobile-parallel.yml
actions-runner/: .credentials  .credentials_rsaparams  .path  .runner  .service  bin  externals  svc.sh
actions-runner/_work/: _update.sh
docs/: IOS_CI_CD_GUIDE.md
examples/: yaml-practice.yml
tests/: __init__.py  conftest.py  conftest_android.py  test_android_enhanced_swipe.py  test_login.py  test_login_android.py  test_login_android_compose.py  test_login_ios.py  test_parallel_mobile.py
(+15 files in other folders)
